# PacketConverter

./: CMakeLists.txt  LICENSE  README.md  config.json  install.sh  keyr.json  keys.json  seta.json  setr.json
inc/: ConcentratorController.h  ConnectionController.h  DevicesTable.h  DiffieHellman.h  Encryption.h  MainApp.h  Message.h  MessageConverter.h  config.h
src/: ConcentratorController.cpp  ConnectionController.cpp  DevicesTable.cpp  DiffieHellman.cpp  Encryption.cpp  MainApp.cpp  Message.cpp  MessageConverter.cpp
